[package]
name = "buildbot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", features = ["collector"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
envy = "0.4"
dotenvy = "0.15.7"
axum = "0.8"
axum-client-ip = "1.1.3"
axum-extra = { version = "0.10", features = ["typed-header"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["limit"] }
sevenz-rust2 = { version = "0.18" }
anyhow = "1.0"
md5 = "0.8.0"
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.18.1", features = ["v4"] }
